@@ -1,4 +1,5 @@
 version 0.4.0 - currently working on
+- Change: The "order by" field is now a drop-down field (#715)
 - Feature: Make list style configurable through TS (#301)
 - Feature: Added localization to the team records (#56)
 
